pbuilder (0.164) UNRELEASED; urgency=low

  * 

 -- Junichi Uekawa <dancer@debian.org>  Mon, 22 Jan 2007 21:03:29 +0900

pbuilder (0.163) unstable; urgency=low

  [ Junichi Uekawa ]
  * --override-config and --mirror without --distribution leaves /proc
    mounted, and breaks cowbuilder. (closes: #405497)
  * pbuilder repository moved over to git!
  * add EXAMPLES section in documentation.
  * use --variant=buildd option for debootstrap and cdebootstrap chroot
    building.

 -- Junichi Uekawa <dancer@debian.org>  Mon, 22 Jan 2007 20:45:10 +0900

pbuilder (0.162) unstable; urgency=low

  [ Junichi Uekawa ]
  * Bug fix: "pbuilder does not clean the /run script from pbuilder
    execute", thanks to Artur R. Czechowski (Closes: #403414).
  * Bug fix: "'EOF on stdin at conffile prompt'; when upgrading to etch",
    thanks to Max Kellermann (Closes: #401863).  Surfaced when doing
    'pbuilder create' with stable, and OTHERMIRROR set to backports.

 -- Junichi Uekawa <dancer@debian.org>  Tue, 26 Dec 2006 17:11:08 +0900

pbuilder (0.161) unstable; urgency=low

  [ Junichi Uekawa ]
  * Clarify documentation so that --configfile loads additional
    configuration, and does not avoid loading configuration in place of
    ~/.pbuilderrc (closes: #394985)
  * pbuilder-doc.xml: update developer information.

  [ Loic Minier ]
  * Testsuite may now test pbuilder-satisfydepends.
  * Ignore umount errors of the types "umount: /foobar: not mounted" and
    "umount: /foobar: not found" as retries will be useless anyway and these
    errors shouldn't cause data loss; thanks Martin F Krafft; closes: #391390.
  * Unmount selinux and bind mounts first.
  * Fix usage of --pdebuild-internal: install passwd during groupadd/useradd
    in pdebuild-internal.
  * New PBUILDERSATISFYDEPENDSCMD config option and --pbuildersatisfydepends
    override flag to set the command to run to satisfy build dependencies;
    default to the /usr/lib/pbuilder/pbuilder-satisfydepends helper.