@@ -1,8 +1,9 @@
 pbuilder (0.164) UNRELEASED; urgency=low
 
-  * 
+  [ Loic Minier ]
+  * Document usage in a vserver environment.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 22 Jan 2007 21:03:29 +0900
+ -- Loic Minier <lool@dooz.org>  Wed, 24 Jan 2007 18:50:48 +0100
 
 pbuilder (0.163) unstable; urgency=low
 
